# BattlefrontLeagueBot

./: .gitignore  pyproject.toml
src/: __main__.py  config-template.py
src/extensions/: admin.py  battlefront.py  errorhandler.py  misc.py
src/models/: __init__.py  bot.py  context.py  database.py  database_match.py  database_member.py  errors.py  game_session.py  game_session_manager.py  plugin.py  views.py
src/sql/: schema.sql
src/sql/migrations/: migration_1.sql
src/static/: __init__.py  battlefront.py  const.py
src/utils/: __init__.py  backup_db.py  helpers.py  image_manipulation.py
