[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "D2",
    "D3",
    "D4",
    "Q",
    "SIM",
    "RUF",
    "ERA",
    "RSE",
    "ASYNC"
]
fixable = ["F","I","D","T20","ERA","RUF"]
ignore = ["F403","D213","D203","F405","ASYNC109"]

[tool.ruff.lint.per-file-ignores]
"errors.py" = ["E501"]
"errorhandler.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[project]
name = "battlefront2bot"
version = "1.0.0"
license = "GNU GPL-3.0"
package-mode = false
requires-python = ">=3.11,<3.13"
dependencies = [
    "hikari (==2.1.1)",
    "hikari-lightbulb (~=2.3.5)",
    "asyncpg (~=0.30.0)",
    "psutil (~=5.9.8)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "uvloop (==0.19.0)",
    "hikari-miru (~=4.2.0)",
]
optional-dependencies = { ruff = [ "ruff~=0.9.3" ] }

[tool.poetry.dependencies]
uvloop = { platform="linux" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
